src/test/deca/codegen/invalid/resultats/uninitializedvar-ima.res
  ** IMA ** ERREUR ** Ligne 14 : 
    WINT avec R1 indefini
